@@ -2,6 +2,8 @@ package ais.service;
 
 import ais.entity.*;
 import ais.repository.*;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -10,14 +12,18 @@ import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
  * Service class for Teacher operations
  * Handles business logic for managing and viewing grades for subjects taught by teachers
+ * Updated with comprehensive exception handling
  */
 @Service
 @Transactional
 public class TeacherService {
+
+    private static final Logger logger = LoggerFactory.getLogger(TeacherService.class);
 
     private final TeacherRepository teacherRepository;
     private final GradeRepository gradeRepository;
@@ -53,35 +59,59 @@ public class TeacherService {
      */
     public Grade enterGrade(Long teacherUserId, Long studentUserId, Long subjectId,
                             BigDecimal gradeValue, String comment) {
-        // Validate teacher teaches this subject
-        validateTeacherTeachesSubject(teacherUserId, subjectId);
+        logger.info("Teacher userId: {} entering grade for student userId: {} in subject: {}",
+                teacherUserId, studentUserId, subjectId);
+        try {
+            // Validate teacher teaches this subject
+            validateTeacherTeachesSubject(teacherUserId, subjectId);
 
-        // Validate grade value
-        if (gradeValue == null || gradeValue.compareTo(BigDecimal.ZERO) < 0 || gradeValue.compareTo(new BigDecimal("100")) > 0) {
-            throw new IllegalArgumentException("Grade value must be between 0 and 100");
+            // Validate grade value
+            if (gradeValue == null || gradeValue.compareTo(BigDecimal.ZERO) < 0
+                    || gradeValue.compareTo(new BigDecimal("100")) > 0) {
+                logger.error("Invalid grade value: {}", gradeValue);
+                throw new IllegalArgumentException("Grade value must be between 0 and 100");
+            }
+
+            // Find student and subject
+            Student student = studentRepository.findByUser_UserId(studentUserId)
+                    .orElseThrow(() -> {
+                        logger.error("Student not found with user ID: {}", studentUserId);
+                        return new IllegalArgumentException("Student not found with user ID: " + studentUserId);
+                    });
+            Subject subject = subjectRepository.findById(subjectId)
+                    .orElseThrow(() -> {
+                        logger.error("Subject not found with ID: {}", subjectId);
+                        return new IllegalArgumentException("Subject not found with ID: " + subjectId);
+                    });
+
+            // Create and save grade
+            Grade grade = new Grade();
+            grade.setStudent(student);
+            grade.setSubject(subject);
+            grade.setGradeValue(gradeValue);
+            grade.setComment(comment);
+            grade.setUpdatedTime(LocalDateTime.now());
+
+            grade = gradeRepository.save(grade);
+            logger.info("Successfully entered grade {} for student userId: {} in subject: {}",
+                    gradeValue, studentUserId, subject.getCode());
+            return grade;
+        } catch (IllegalArgumentException e) {
+            logger.warn("Validation error entering grade: {}", e.getMessage());
+            throw e;
+        } catch (Exception e) {
+            logger.error("Unexpected error entering grade: {}", e.getMessage(), e);
+            throw new RuntimeException("Failed to enter grade. Please try again later.", e);
         }
-
-        // Find student and subject
-        Student student = studentRepository.findByUser_UserId(studentUserId)
-                .orElseThrow(() -> new IllegalArgumentException("Student not found with user ID: " + studentUserId));
-        Subject subject = subjectRepository.findById(subjectId)
-                .orElseThrow(() -> new IllegalArgumentException("Subject not found with ID: " + subjectId));
-
-        // Create and save grade (no duplicate check - allows multiple grades)
-        Grade grade = new Grade();
-        grade.setStudent(student);
-        grade.setSubject(subject);
-        grade.setGradeValue(gradeValue);
-        grade.setComment(comment);
-        grade.setUpdatedTime(LocalDateTime.now());
-
-        return gradeRepository.save(grade);
     }
 
     /**
      * Save a grade directly (helper method for controller)
      */
     public Grade saveGrade(Grade grade) {
+        logger.debug("Saving grade for student: {}, subject: {}",
+                grade.getStudent().getUser().getUsername(),
+                grade.getSubject().getCode());
         return gradeRepository.save(grade);
     }
 
@@ -89,16 +119,24 @@ public class TeacherService {
      * Get student by user ID (helper method)
      */
     public Student getStudentByUserId(Long userId) {
+        logger.debug("Retrieving student with userId: {}", userId);
         return studentRepository.findByUser_UserId(userId)
-                .orElseThrow(() -> new IllegalArgumentException("Student not found with user ID: " + userId));
+                .orElseThrow(() -> {
+                    logger.error("Student not found with user ID: {}", userId);
+                    return new IllegalArgumentException("Student not found with user ID: " + userId);
+                });
     }
 
     /**
      * Get subject by ID (helper method)
      */
     public Subject getSubjectById(Long subjectId) {
+        logger.debug("Retrieving subject with ID: {}", subjectId);
         return subjectRepository.findById(subjectId)
-                .orElseThrow(() -> new IllegalArgumentException("Subject not found with ID: " + subjectId));
+                .orElseThrow(() -> {
+                    logger.error("Subject not found with ID: {}", subjectId);
+                    return new IllegalArgumentException("Subject not found with ID: " + subjectId);
+                });
     }
 
     /**
@@ -112,14 +150,20 @@ public class TeacherService {
      * @throws IllegalArgumentException if validation fails
      */
     public Grade editGrade(Long teacherUserId, Long gradeId, BigDecimal newGradeValue, String newComment) {
+        logger.info("Teacher userId: {} editing grade ID: {}", teacherUserId, gradeId);
+
         Grade grade = gradeRepository.findById(gradeId)
-                .orElseThrow(() -> new IllegalArgumentException("Grade not found with ID: " + gradeId));
+                .orElseThrow(() -> {
+                    logger.error("Grade not found with ID: {}", gradeId);
+                    return new IllegalArgumentException("Grade not found with ID: " + gradeId);
+                });
 
         // Validate teacher teaches this subject
         validateTeacherTeachesSubject(teacherUserId, grade.getSubject().getSubjectId());
 
         // Validate grade value
         if (newGradeValue.compareTo(BigDecimal.ZERO) < 0 || newGradeValue.compareTo(new BigDecimal("100")) > 0) {
+            logger.error("Invalid new grade value: {}", newGradeValue);
             throw new IllegalArgumentException("Grade value must be between 0 and 100");
         }
 
@@ -128,7 +172,9 @@ public class TeacherService {
         grade.setComment(newComment);
         grade.setUpdatedTime(LocalDateTime.now());
 
-        return gradeRepository.save(grade);
+        grade = gradeRepository.save(grade);
+        logger.info("Successfully updated grade ID: {} to value: {}", gradeId, newGradeValue);
+        return grade;
     }
 
     /**
@@ -139,27 +185,53 @@ public class TeacherService {
      * @throws IllegalArgumentException if validation fails
      */
     public void deleteGrade(Long teacherUserId, Long gradeId) {
+        logger.info("Teacher userId: {} deleting grade ID: {}", teacherUserId, gradeId);
+
         Grade grade = gradeRepository.findById(gradeId)
-                .orElseThrow(() -> new IllegalArgumentException("Grade not found with ID: " + gradeId));
+                .orElseThrow(() -> {
+                    logger.error("Grade not found with ID: {}", gradeId);
+                    return new IllegalArgumentException("Grade not found with ID: " + gradeId);
+                });
 
         // Validate teacher teaches this subject
         validateTeacherTeachesSubject(teacherUserId, grade.getSubject().getSubjectId());
 
         gradeRepository.delete(grade);
+        logger.info("Successfully deleted grade ID: {}", gradeId);
     }
 
     // ==================== View Grade Information ====================
 
     /**
      * Get all grades for a subject taught by the teacher
+     * Filters out grades with deleted students
      * @param teacherUserId the teacher's user ID
      * @param subjectId the subject ID
-     * @return List of grades for the subject
+     * @return List of grades for the subject (excluding orphaned grades)
      * @throws IllegalArgumentException if teacher doesn't teach this subject
      */
     public List<Grade> getGradesBySubject(Long teacherUserId, Long subjectId) {
+        logger.debug("Retrieving grades for teacher userId: {} in subject: {}", teacherUserId, subjectId);
+
         validateTeacherTeachesSubject(teacherUserId, subjectId);
-        return gradeRepository.findBySubject_SubjectId(subjectId);
+        List<Grade> grades = gradeRepository.findBySubject_SubjectId(subjectId);
+
+        // Filter out grades with deleted students
+        List<Grade> filteredGrades = grades.stream()
+                .filter(grade -> {
+                    try {
+                        grade.getStudent().getUser().getUserId();
+                        return true;
+                    } catch (Exception e) {
+                        logger.warn("Filtering out grade with deleted student - grade ID: {}",
+                                grade.getGradeId());
+                        return false;
+                    }
+                })
+                .collect(Collectors.toList());
+
+        logger.debug("Found {} grades (after filtering) for subject: {}", filteredGrades.size(), subjectId);
+        return filteredGrades;
     }
 
     /**
@@ -171,10 +243,17 @@ public class TeacherService {
      * @throws IllegalArgumentException if teacher doesn't teach this subject
      */
     public List<Grade> getStudentGradesInSubject(Long teacherUserId, Long studentUserId, Long subjectId) {
+        logger.debug("Retrieving grades for student userId: {} in subject: {} by teacher userId: {}",
+                studentUserId, subjectId, teacherUserId);
+
         validateTeacherTeachesSubject(teacherUserId, subjectId);
-        return gradeRepository.findByStudent_User_UserId(studentUserId).stream()
+        List<Grade> grades = gradeRepository.findByStudent_User_UserId(studentUserId).stream()
                 .filter(grade -> grade.getSubject().getSubjectId().equals(subjectId))
-                .toList();
+                .collect(Collectors.toList());
+
+        logger.debug("Found {} grades for student userId: {} in subject: {}",
+                grades.size(), studentUserId, subjectId);
+        return grades;
     }
 
     /**
@@ -186,8 +265,29 @@ public class TeacherService {
      * @throws IllegalArgumentException if teacher doesn't teach this subject
      */
     public List<Grade> getGradesByGroupAndSubject(Long teacherUserId, Long groupId, Long subjectId) {
+        logger.debug("Retrieving grades for group: {} in subject: {} by teacher userId: {}",
+                groupId, subjectId, teacherUserId);
+
         validateTeacherTeachesSubject(teacherUserId, subjectId);
-        return gradeRepository.findByGroupIdAndSubjectId(groupId, subjectId);
+        List<Grade> grades = gradeRepository.findByGroupIdAndSubjectId(groupId, subjectId);
+
+        // Filter out grades with deleted students
+        List<Grade> filteredGrades = grades.stream()
+                .filter(grade -> {
+                    try {
+                        grade.getStudent().getUser().getUserId();
+                        return true;
+                    } catch (Exception e) {
+                        logger.warn("Filtering out grade with deleted student - grade ID: {}",
+                                grade.getGradeId());
+                        return false;
+                    }
+                })
+                .collect(Collectors.toList());
+
+        logger.debug("Found {} grades for group: {} in subject: {}",
+                filteredGrades.size(), groupId, subjectId);
+        return filteredGrades;
     }
 
     /**
@@ -196,7 +296,10 @@ public class TeacherService {
      * @return List of subjects taught by the teacher
      */
     public List<Subject> getSubjectsTaughtByTeacher(Long teacherUserId) {
-        return subjectRepository.findByTeacherId(teacherUserId);
+        logger.debug("Retrieving subjects taught by teacher userId: {}", teacherUserId);
+        List<Subject> subjects = subjectRepository.findByTeacherId(teacherUserId);
+        logger.debug("Teacher userId: {} teaches {} subjects", teacherUserId, subjects.size());
+        return subjects;
     }
 
     /**
@@ -205,7 +308,10 @@ public class TeacherService {
      * @return List of students taught by the teacher
      */
     public List<Student> getStudentsTaughtByTeacher(Long teacherUserId) {
-        return studentRepository.findByTeacherId(teacherUserId);
+        logger.debug("Retrieving students taught by teacher userId: {}", teacherUserId);
+        List<Student> students = studentRepository.findByTeacherId(teacherUserId);
+        logger.debug("Teacher userId: {} teaches {} students", teacherUserId, students.size());
+        return students;
     }
 
     /**
@@ -214,14 +320,22 @@ public class TeacherService {
      * @return List of groups taught by the teacher
      */
     public List<Group> getGroupsTaughtByTeacher(Long teacherUserId) {
+        logger.debug("Retrieving groups taught by teacher userId: {}", teacherUserId);
+
         Teacher teacher = teacherRepository.findByUser_UserId(teacherUserId)
-                .orElseThrow(() -> new IllegalArgumentException("Teacher not found with user ID: " + teacherUserId));
-        // Using GroupRepository method that was defined in the schema
-        return teacher.getTeacherSubjects().stream()
+                .orElseThrow(() -> {
+                    logger.error("Teacher not found with user ID: {}", teacherUserId);
+                    return new IllegalArgumentException("Teacher not found with user ID: " + teacherUserId);
+                });
+
+        List<Group> groups = teacher.getTeacherSubjects().stream()
                 .flatMap(ts -> ts.getSubject().getGroupSubjects().stream())
                 .map(GroupSubject::getGroup)
                 .distinct()
-                .toList();
+                .collect(Collectors.toList());
+
+        logger.debug("Teacher userId: {} teaches {} groups", teacherUserId, groups.size());
+        return groups;
     }
 
     // ==================== Statistics and Reports ====================
@@ -234,9 +348,15 @@ public class TeacherService {
      * @throws IllegalArgumentException if teacher doesn't teach this subject
      */
     public BigDecimal calculateAverageGradeForSubject(Long teacherUserId, Long subjectId) {
+        logger.debug("Calculating average grade for subject: {} by teacher userId: {}",
+                subjectId, teacherUserId);
+
         validateTeacherTeachesSubject(teacherUserId, subjectId);
         BigDecimal average = gradeRepository.calculateAverageBySubjectId(subjectId);
-        return average != null ? average : BigDecimal.ZERO;
+        BigDecimal result = average != null ? average : BigDecimal.ZERO;
+
+        logger.debug("Average grade for subject: {} is: {}", subjectId, result);
+        return result;
     }
 
     /**
@@ -248,10 +368,25 @@ public class TeacherService {
      * @throws IllegalArgumentException if teacher doesn't teach this subject
      */
     public List<Grade> getFailingGradesInSubject(Long teacherUserId, Long subjectId, BigDecimal passingGrade) {
+        logger.debug("Retrieving failing grades (below {}) for subject: {} by teacher userId: {}",
+                passingGrade, subjectId, teacherUserId);
+
         validateTeacherTeachesSubject(teacherUserId, subjectId);
-        return gradeRepository.findBySubject_SubjectId(subjectId).stream()
-                .filter(grade -> grade.getGradeValue().compareTo(passingGrade) < 0)
-                .toList();
+        List<Grade> grades = gradeRepository.findBySubject_SubjectId(subjectId);
+
+        List<Grade> failingGrades = grades.stream()
+                .filter(grade -> {
+                    try {
+                        grade.getStudent().getUser().getUserId();
+                        return grade.getGradeValue().compareTo(passingGrade) < 0;
+                    } catch (Exception e) {
+                        return false;
+                    }
+                })
+                .collect(Collectors.toList());
+
+        logger.debug("Found {} failing grades in subject: {}", failingGrades.size(), subjectId);
+        return failingGrades;
     }
 
     /**
@@ -262,8 +397,26 @@ public class TeacherService {
      * @throws IllegalArgumentException if teacher doesn't teach this subject
      */
     public List<Grade> getTopGradesInSubject(Long teacherUserId, Long subjectId) {
+        logger.debug("Retrieving top grades for subject: {} by teacher userId: {}",
+                subjectId, teacherUserId);
+
         validateTeacherTeachesSubject(teacherUserId, subjectId);
-        return gradeRepository.findTopGradesBySubjectId(subjectId);
+        List<Grade> grades = gradeRepository.findTopGradesBySubjectId(subjectId);
+
+        // Filter out grades with deleted students
+        List<Grade> topGrades = grades.stream()
+                .filter(grade -> {
+                    try {
+                        grade.getStudent().getUser().getUserId();
+                        return true;
+                    } catch (Exception e) {
+                        return false;
+                    }
+                })
+                .collect(Collectors.toList());
+
+        logger.debug("Found {} top grades in subject: {}", topGrades.size(), subjectId);
+        return topGrades;
     }
 
     /**
@@ -274,8 +427,13 @@ public class TeacherService {
      * @throws IllegalArgumentException if teacher doesn't teach this subject
      */
     public long countGradesInSubject(Long teacherUserId, Long subjectId) {
+        logger.debug("Counting grades in subject: {} by teacher userId: {}", subjectId, teacherUserId);
+
         validateTeacherTeachesSubject(teacherUserId, subjectId);
-        return gradeRepository.countBySubject_SubjectId(subjectId);
+        long count = gradeRepository.countBySubject_SubjectId(subjectId);
+
+        logger.debug("Subject: {} has {} grades", subjectId, count);
+        return count;
     }
 
     /**
@@ -286,10 +444,25 @@ public class TeacherService {
      * @throws IllegalArgumentException if teacher doesn't teach this subject
      */
     public List<Grade> getGradesWithCommentsInSubject(Long teacherUserId, Long subjectId) {
+        logger.debug("Retrieving grades with comments for subject: {} by teacher userId: {}",
+                subjectId, teacherUserId);
+
         validateTeacherTeachesSubject(teacherUserId, subjectId);
-        return gradeRepository.findBySubject_SubjectId(subjectId).stream()
-                .filter(grade -> grade.getComment() != null && !grade.getComment().isEmpty())
-                .toList();
+        List<Grade> grades = gradeRepository.findBySubject_SubjectId(subjectId);
+
+        List<Grade> gradesWithComments = grades.stream()
+                .filter(grade -> {
+                    try {
+                        grade.getStudent().getUser().getUserId();
+                        return grade.getComment() != null && !grade.getComment().isEmpty();
+                    } catch (Exception e) {
+                        return false;
+                    }
+                })
+                .collect(Collectors.toList());
+
+        logger.debug("Found {} grades with comments in subject: {}", gradesWithComments.size(), subjectId);
+        return gradesWithComments;
     }
 
     // ==================== Validation Methods ====================
@@ -303,6 +476,7 @@ public class TeacherService {
     private void validateTeacherTeachesSubject(Long teacherUserId, Long subjectId) {
         boolean teaches = teacherSubjectRepository.existsActiveAssignment(teacherUserId, subjectId);
         if (!teaches) {
+            logger.error("Teacher userId: {} does not teach subject: {}", teacherUserId, subjectId);
             throw new IllegalArgumentException(
                     "Teacher with user ID " + teacherUserId + " does not teach subject with ID " + subjectId);
         }
@@ -315,7 +489,10 @@ public class TeacherService {
      * @return true if teacher teaches the subject, false otherwise
      */
     public boolean isTeachingSubject(Long teacherUserId, Long subjectId) {
-        return teacherSubjectRepository.existsActiveAssignment(teacherUserId, subjectId);
+        boolean teaches = teacherSubjectRepository.existsActiveAssignment(teacherUserId, subjectId);
+        logger.debug("Teacher userId: {} {} subject: {}",
+                teacherUserId, teaches ? "teaches" : "does not teach", subjectId);
+        return teaches;
     }
 
     /**
@@ -325,8 +502,12 @@ public class TeacherService {
      * @throws IllegalArgumentException if teacher not found
      */
     public Teacher getTeacherByUserId(Long userId) {
+        logger.debug("Retrieving teacher with userId: {}", userId);
         return teacherRepository.findByUser_UserId(userId)
-                .orElseThrow(() -> new IllegalArgumentException("Teacher not found with user ID: " + userId));
+                .orElseThrow(() -> {
+                    logger.error("Teacher not found with user ID: {}", userId);
+                    return new IllegalArgumentException("Teacher not found with user ID: " + userId);
+                });
     }
 
     /**
@@ -335,6 +516,8 @@ public class TeacherService {
      * @return true if user is a teacher, false otherwise
      */
     public boolean isTeacher(Long userId) {
-        return teacherRepository.existsByUser_UserId(userId);
+        boolean isTeacher = teacherRepository.existsByUser_UserId(userId);
+        logger.debug("User ID: {} is{} a teacher", userId, isTeacher ? "" : " not");
+        return isTeacher;
     }
 }
